Update style.css corrected alignment

--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,5 @@ body{
 
 .flex-box{
   display: flex;
+  align: left;
 }
